# TriageAI

./: .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CLAUDE.md  COMPLIANCE.md  CONVENTIONS.md  CTAS_TRIAGE.md  Caddyfile  DEPLOY.md  DEPLOYMENT.md  EXECUTION_GUIDE.md  FRONTEND.md  MONETIZATION.md  README.md  ROADMAP.md  RUNBOOK.md  TESTING.md  VOICE_PIPELINE.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260228_0000_a1b2c3d4_initial_schema.py
backend/app/: config.py  database.py  exceptions.py  main.py  retention.py
backend/app/admin/: auth.py  router.py  settings.py
backend/app/escalation/: router.py  service.py  transfer.py
backend/app/logging/: session_logger.py
backend/app/models/: __init__.py  session.py  system_event.py  triage_session.py
backend/app/routing/: __init__.py
backend/app/triage/: classifier.py  prompts.py  router.py  state_machine.py  triage_config.json
backend/app/voice/: audio_utils.py  dependencies.py  media_bridge.py  router.py
backend/static/: fallback.twiml
backend/tests/smoke/: test_smoke.py
backend/tests/unit/: test_admin.py  test_audio_utils.py  test_classifier.py  test_escalation.py  test_health.py  test_p0_safety.py  test_routing.py  test_session_logger.py  test_state_machine.py  test_triage_router.py  test_voice_webhook.py
docs/: README.md
frontend/: Caddyfile.frontend  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: create_github_issues.py  (+1 more)
(+38 files in other folders)
